update css-tree to 1.0.0-alpha.39

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "c8": "^5.0.1",
     "code-red": "0.1.1",
     "codecov": "^3.5.0",
-    "css-tree": "1.0.0-alpha22",
+    "css-tree": "1.0.0-alpha.39",
     "eslint": "^6.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-svelte3": "^2.7.3",
